# aios

./: READEME.md
Cerebrum/: README.md  pyproject.toml  requirements.txt
Cerebrum/benchmarks/: experiment_core.py  utils.py
Cerebrum/benchmarks/agents/cot/: cot.py
Cerebrum/benchmarks/agents/owl/: agent.py  role_playing.py
Cerebrum/benchmarks/gaia/: inference.py  run_evaluation.py  run_exp.sh
Cerebrum/benchmarks/humaneval/: inference.py  run_exp.sh
Cerebrum/benchmarks/osworld/: run_exp.py
Cerebrum/benchmarks/swebench/: inference.py  run_exp.sh
Cerebrum/cerebrum/: run_cua.py  script.sh  test_apis.py
Cerebrum/cerebrum/commands/: download_agent.py  download_tool.py  list_agenthub_agents.py  list_available_llms.py  list_local_agents.py  list_local_tools.py  list_toolhub_tools.py  run_agent.py  upload_agent.py  upload_tool.py
Cerebrum/cerebrum/community/adapter/: __init__.py  adapter.py  autogen_adapter.py  camel_adapter.py  interpreter_adapter.py  metagpt_adapter.py
Cerebrum/cerebrum/config/: config.yaml  config_manager.py
Cerebrum/cerebrum/example/: aios_demo.py  local_agent_load_demo.py  local_tool_load_demo.py  main.py  run_agent.sh  upload_tool_demo.py
Cerebrum/cerebrum/example/agents/ResultTranslatorAgent/: agent.py  config.json  (+1 more)
Cerebrum/cerebrum/interface/: __init__.py
Cerebrum/cerebrum/llm/: apis.py  layer.py
Cerebrum/cerebrum/manager/: agent.py  package.py  tool.py
Cerebrum/cerebrum/memory/: apis.py
Cerebrum/cerebrum/storage/: apis.py
Cerebrum/cerebrum/tool/: apis.py
Cerebrum/cerebrum/tool/core/: registry.py
Cerebrum/cerebrum/tool/mcp_tool/: __init__.py  mcp_client.py  pool.py  type.py
Cerebrum/cerebrum/utils/: __init__.py  browser.py  communication.py  packages.py  run_agent.py  utils.py
Cerebrum/tests/agents/: README.md
Cerebrum/tests/agents/run-single-agent/: test_ollama.py
Cerebrum/tests/apis/: README.md
Cerebrum/tests/apis/memory/: test_memory_apis.py
(+85 files in other folders)
